@@ -5009,13 +5009,6 @@
         ]
       },
       {
-        "code": 408,
-        "indent": 0,
-        "parameters": [
-          "- Fire attacks remove Water status effects."
-        ]
-      },
-      {
         "code": 108,
         "indent": 0,
         "parameters": [
