@@ -351,6 +351,7 @@ Changes:
  - The pub/tavern has been rebranded as The Tipsy Oyster! Barkeep's name has been revealed to be Jeremy, and all of his establishments have been redesigned (except for the original in Haven Harbor).
  - Fleshed out the salvaging system, making many items throughout the game now salvageable.
  - Leveling up will also remove all debuffs.
+ - Fire attacks no longer remove water states.
  - Many shop stocks and enemy drop pools have been modified.
  - Increased all ore mining drop ranges by 1 on both bounds (e.g. copper ore now drops 3-5 copper clusters instead of the old 2-4).
  - Being defeated by a Lost Soul in the Great Pyramid will now send you back to the start of the dungeon instead of giving a game over.
